--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -11,20 +11,20 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Install NodeJS 20.x
-        uses: actions/setup-node@v1
+      - name: Install NodeJS 18.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: 18.x
 
       - name: Install Packages
         run: npm Install
 
       - name: Install Railway CLI
-        run: npm i -g@railway/cli
+        run: npm i -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up
+        run: railway up --service ${{secrets.RAILWAY_SERVICE_ID}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_DEV_TOKEN}}
